[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Scripts/EnemyScripts/TestEnemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/0x72_16x16DungeonTileset.v1.png" type="Texture" id=2]
[ext_resource path="res://Objects/Enemies/EnemyWeapons/EnemyWeapon.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 4.18353

[sub_resource type="CircleShape2D" id=2]
radius = 260.082

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5, 7.5 )

[sub_resource type="CircleShape2D" id=4]
radius = 26.6132

[node name="TestEnemy" type="KinematicBody2D" groups=[
"Enemies",
]]
collision_layer = 64
collision_mask = 70
script = ExtResource( 1 )
health = 3

[node name="Weapon" type="Node2D" parent="."]

[node name="EnemyWeapon" parent="Weapon" instance=ExtResource( 3 )]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 97, 97, 13, 15 )

[node name="MovementCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.99134 )
shape = SubResource( 1 )

[node name="DetectionRange" type="Area2D" parent="."]
visible = false
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource( 2 )

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DamageAgainTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 16

[node name="Col" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -0.5 )
shape = SubResource( 3 )

[node name="Vision" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 60 )
collision_mask = 6

[node name="TimedProcess" type="Timer" parent="."]
autostart = true

[node name="Line2D" type="Line2D" parent="."]
visible = false
width = 5.0

[node name="MeleeRange" type="Area2D" parent="."]
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeRange"]
shape = SubResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = -31.8693
margin_top = -16.3518
margin_right = 10.1307
margin_bottom = -2.35179
rect_scale = Vector2( 0.518622, 0.455142 )
text = "Statew"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="DamageAgainTimer" to="." method="DamageAgainTimerTimeout"]
